Add files via upload
app startup fully repaired - switched to the newest version of sdk.
Updated readme.md
Login option works.