@@ -5,6 +5,7 @@ Here's intruction (Intellij & docker):
 - new java project
 - add files
 - add javafx sdk/lib and postgres(included in lib folder) to Project Structure -> libraries.
+- add "--module-path "/path/to/sdk-17/lib" --add-modules javafx.controls,javafx.fxml" as VM options in run configuration
 - make artifacts with postgres
 - build artifacts
 - docker compose up -d
